add psf git alias, configure new email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,14 @@
 [user]
         name = Zan Marolt
-        email = zan.marolt@zan.sh
+        email = marolt@zan.sh
 [core]
         excludesfile = ~/.gitignore_global
 [push]
-        # prevents your from accidentally pushing to a wrong branch
+        # prevents you from accidentally pushing to a wrong branch
         default = nothing
 
 [alias]
+	psf    = push --force-with-lease
         dc     = diff --cached
         co     = checkout
         ci     = commit
